--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -64,7 +64,7 @@
 <div class ="span6">
 	<div class="center hero-unit">
 				
-    <div class ="hidden-tablet hidden-phone"><h1>Students</h1><h2>
+    <div class ="hidden-tablet hidden-phone"><h1>Hackers</h1><h2>
 			      Tap in 9 answers anonymously. Sit back. Get recruited.
 			    </h2>
 				    <br><%= link_to "Signup", candidate_signup_path, 
@@ -78,7 +78,7 @@
 
 					</div>
     
-<div class ="visible-tablet"><h2>Students</h2><h4>
+<div class ="visible-tablet"><h2>Hackers</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back. Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, 
@@ -90,7 +90,7 @@
 				    <%= link_to "fb Login", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-medium btn-primary" %>
 </div>
-    <div class ="visible-phone"><h2>Students</h2><h4>
+    <div class ="visible-phone"><h2>Hackers</h2><h4>
 			      Tap in 9 answers anonymously.<br> Sit back.<br> Get recruited.
 			    </h4>
 				    <br><%= link_to "Signup", candidate_signup_path, 
@@ -112,11 +112,11 @@
   		<div class ="hidden-tablet hidden-phone">
 				<h1>Companies</h1>
 			     <h2>
-			      Recruit Stanford students and graduates.
+			      Recruit the world's best hackers.
 			    </h2>
 				    <br>
 				    
-				<%= link_to "Find Students", profiles_path, id: "sign_in", 
+				<%= link_to "Find Hackers", profiles_path, id: "sign_in", 
                                 class: "btn btn-large btn-primary" %>
 
 
@@ -124,21 +124,21 @@
 		<div class ="visible-tablet">
 				<h2>Companies</h2>
 			     <h4>
-			      Recruit Stanford students and graduates.
+			      Recruit the world's best hackers.
 			    </h4>
 				    <br>
 				    
-				<%= link_to "Find Students", profiles_path, id: "sign_in", 
+				<%= link_to "Find Hackers", profiles_path, id: "sign_in", 
                                 class: "btn btn-medium btn-primary" %>
 		</div>
 		<div class ="visible-phone">
 				<h2>Companies</h2>
 			     <h4>
-			      Recruit Stanford students and graduates.
+			      Recruit the world's best hackers.
 			    </h4>
 				    <br>
 				    
-				<%= link_to "Find Students", profiles_path, id: "sign_in", 
+				<%= link_to "Find Hackers", profiles_path, id: "sign_in", 
                                 class: "btn btn-medium btn-primary" %>
 		</div>
 
