--- a/app/views/user_mailer/signup.html.erb
+++ b/app/views/user_mailer/signup.html.erb
@@ -1,9 +1,9 @@
 Welcome to TapCV 
 <br><br>
-Use TapCV to find highly qualified students that you wouldn't find anyhwere else!
+Use TapCV to find highly qualified hackers that you wouldn't find anyhwere else!
 <br><br>
 
-<b><%= link_to "Start browsing Students now", root_url %></b>
+<b><%= link_to "Start browsing hackers now", root_url %></b>
 <br><br>
 Yours,
 <br><br>
