--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -4,15 +4,39 @@
   	<div class="form-inputs">
   		<div class ="module"></div>
 		<b>Your job preferences</b><br><br>
-			<%= f.association :role, collection: Role.order('name'), prompt: "Select your favourite role", label: "Favourite role", :include_blank => "other", %>
-			<%= f.input :full_time, label: "Full-time", inline_label: 'I am looking for a full-time job.' %>
+			<%= f.input :silicon_valley, label: "Full-time", inline_label: 'I am willing to work full-time in the SF Bay Area.' %>
+			<%= f.input :silicon_valley_part_time, label: "Part-time", inline_label: 'I am willing to work part-time in the SF Bay Area.' %>
 			<%= f.input :general_min_yearly_salary, collection: [["$30,000", 30000], ["$40,000",40000], ["$50,000",50000],["$60,000",60000],["$70,000",70000],["$80,000",80000],["$90,000",90000],["$100,000",100000],["$120,000",120000],["$140,000",140000],["$160,000",160000],["$180,000",180000],["$200,000",200000],["$250,000",250000],["$300,000",300000],["$350,000",350000],["$400,000",400000],["$500,000",500000]], prompt: "Select your minimum salary", label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
-			<%= f.input :part_time, label: "Part-time", inline_label: 'I am looking for a part-time job.' %>
 			<%= f.input :general_min_hourly_salary, collection: [["None", 0], ["$10", 10], ["$15", 15], ["$20", 20], ["$30", 30], ["$40", 14], ["$50", 50], ["$60", 60], ["$70", 70], ["$80", 80], ["$90", 90], ["$100", 100], ["$125", 125], ["$150", 150], ["$200", 200], ["$250", 250], ["$300", 300], ["$400", 400], ["$500", 500], ["$750", 750], ["$1000", 1000]], prompt: "Select hourly salary", label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Your minimum desired hourly wage (in USD)' %>
 		  	<%= f.input :notice_period, collection: [["Today", 0],["1 week", 1],["2 weeks", 2],["3 week", 3], ["4 weeks", 4], ["6 weeks", 6],["2 months", 8],["3 months", 12],["4 months", 16],["5 months", 20],["6 months", 24],["9 months", 36],["1 year", 52]], label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start?', prompt: "Select your notice period"%>
 		  	<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
 		 
+		<div class ="module"></div>
+			<b> Your mobile apps </b>
+			<br><br>
+			<%= f.input :ios_apps, collection: [["None", 0],["1", 1],["2", 2],["3", 3],["4", 4],["5", 5],["6", 6],["7", 7],["8", 8],["9", 9],["10+", 10],["15+", 15],["20+", 20],["30+", 30],["50+", 50],["100+", 100]], prompt: "Select number of apps", label: 'iOS apps in the App Store', hint: 'Number of iOS apps that you built yourself, not in a team.' %>
+			<div class ="slim_module"></div>
 
+			<%= f.input :android_apps, collection: [["None", 0],["1", 1],["2", 2],["3", 3],["4", 4],["5", 5],["6", 6],["7", 7],["8", 8],["9", 9],["10+", 10],["15+", 15],["20+", 20],["30+", 30],["50+", 50],["100+", 100]], prompt: "Select number of apps", label: 'Android apps in the Play Store', hint: 'Number of Android apps that you built yourself, not in a team.' %>
+		<div class ="module"></div>
+		<b>Professional hacking experience (start with your last/current job)</b><br><br>
+
+		<%= f.fields_for :jobs do |job_form| %>
+		 	<%= job_form.input :company_name, label: "Company/Organization", placeholder: 'e.g. "Google" or "World Bank"' %>
+		 	<%= job_form.input :company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
+		  	<%= job_form.association :position, label: 'Position', prompt: "Select position" %>
+		  	<%= job_form.association :platforms, collection: Platform.order('name'), as: :check_boxes, label: 'Platform/language' %>
+		  	<%= job_form.input :start_date, label: 'Start date', :discard_day => true, :prompt => {:year => "Select start year", :month => "Select start month"} %>
+		  	<%= job_form.input :end_date, label: 'End date', :discard_day => true, :prompt => {:year => "Select end year", :month => "Select end month"} %>
+		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
+		  	<%= job_form.input :contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
+		  	<p><%= job_form.link_to_remove "[-] Remove the above work experience" %></p>
+		  	<br><br>
+		<div class ="slim_module"></div>
+
+		<% end %>
+
+		<p><%= f.link_to_add "[+] Add a work experience", :jobs %></p>
 
 		<div class ="module"></div>
 		<b>Education (include programs your are currently enrolled in)</b><br><br>
@@ -40,24 +64,7 @@
 		<div class ="slim_module"></div>
 		<% end %>
 		<p><%= f.link_to_add "[+] Add a test score", :test_scores %></p>
-		<div class ="module"></div>
-		<b>Work experience (start with your last/current job)</b><br><br>
-
-		<%= f.fields_for :jobs do |job_form| %>
-		 	<%= job_form.input :company_name, label: "Company/Organization", placeholder: 'e.g. "Google" or "World Bank"' %>
-		  	<%= job_form.association :sector, collection: Sector.order('name'), prompt: "Select industry", label: "Industry" %>
-		  	<%= job_form.input :position_name, label: 'Position', prompt: "Enter position", placeholder: 'e.g. "intern" or "senior analyst"' %>
-		  	<%= job_form.input :start_date, label: 'Start date', :discard_day => true, :prompt => {:year => "Select start year", :month => "Select start month"} %>
-		  	<%= job_form.input :end_date, label: 'End date', :discard_day => true, :prompt => {:year => "Select end year", :month => "Select end month"} %>
-		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
-		  	<%= job_form.input :contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
-		  	<p><%= job_form.link_to_remove "[-] Remove the above work experience" %></p>
-		  	<br><br>
-		<div class ="slim_module"></div>
-
-		<% end %>
-
-		<p><%= f.link_to_add "[+] Add a work experience", :jobs %></p>
+		
 
 <div class ="module"></div>
 	
